Resolved PDS-409 - Validate: Use target root as base directory when doing checksum validation
git-svn-id: https://starcell.jpl.nasa.gov/repo/2010/trunk@14440 45d5965c-88be-4637-9056-144873d6cd01